# MarketFlowAI

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.agent/rules/: programming-standards.md
configs/: logging.yaml  model.yaml  thresholds.yaml
docs/: crewai_market_research_global_rules.md  dynamic_task_decomposition.md
samples/: 01_request_input.json  02_research_plan.json  03_evidence_initial.json  04_signals.json  05_triggered_tasks.json  06_evidence_additional.json  07_final_report.json  08_final_report.md
src/: app.py  cli.py
src/crews/: debate_crew.py  fundamentals_crew.py  llm_client.py  news_crew.py  options_liquidity_crew.py  price_crew.py  regulation_legal_crew.py
src/orchestrator/: flow.py  planner.py  synthesis.py  triggers.py  verdict.py
src/schemas/: evidence.py  plan.py  report.py  request.py
src/tools/: cache.py  news_fetcher.py  price_fetcher.py  signal_calculators.py
src/utils/: io.py  logging.py  time.py
tests/: qa_verification.py  test_orchestrator_smoke.py  test_schemas.py
